# Genetics-parallel

./: .gitignore  CMakeLists.txt  README.md  fun.h  fun_s.c  gengrupos_s.c  res.out
docs/informe/tiempos/: analisis_tiempos.xlsx
include/: defineg.h  fun.h
parallel/src/: fun_s.c  gengrupos_s.c
resultados/: dbgen_s1000.out  dbgen_sEntero.out  my1000res.out  myfullres.out  myres.out  myres100.out  res1000.out  resfull.out
serie/src/: fun_s.c
src/: fun_s.c  gengrupos_s.c
src/parallel/: CMakeLists.txt  fun_p.c  fun_s.c  gengrupos_p.c  gengrupos_s.c
src/serie/: CMakeLists.txt  fun_s.c
